deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hub-of-hubs-apis
  labels:
    app: hub-of-hubs-apis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-of-hubs-apis
  template:
    metadata:
      labels:
        app: hub-of-hubs-apis
    spec:
      containers:
      - args:
          - "/hub-of-hubs-apis"
          - "--secure-port=6443"
        name: hub-of-hubs-apis
        image: quay.io/clyang82/hub-of-hubs-apis:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          runAsNonRoot: true
